--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-156.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-238.1KB/s(Youtube:不良林), server: 54.36.174.181, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-2.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-207.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇫🇷 法国-244.2KB/s(Youtube:不良林), server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: 85.208.108.59, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇫🇷 法国-204.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 43567, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-312.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-304.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: ieiplc.sev7en.club, port: 20550, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-463.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-156.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-392.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-244.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.64MB/s(Youtube:不良林)
       - 🇫🇷 法国-204.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-312.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
