--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-772.5KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-463.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-453.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-229.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-263.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-205.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-565.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 捷克-208.7KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 85.208.108.59, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-927.3KB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-329.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-208.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-772.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-319.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
       - 捷克-208.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-208.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
