--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-329.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-169.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-621.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-585.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇳 中国-156.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-176.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-594.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-403.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-221.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-942.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇭🇰 香港-538.8KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-190.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-169.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-530.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-621.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-156.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-403.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-942.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-538.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
